objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ARR_Current_Month__c</fullName>
        <formula>IF((Item_Revenue_Start_Month__c&lt;= TODAY())  &amp;&amp;  (Item_Revenue_End_Month__c &gt;=  DATE(YEAR(TODAY()),MONTH(TODAY()),1)),  ARR__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR Current Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Last_Month__c</fullName>
        <formula>IF((Item_Revenue_Start_Month__c&lt;= ADDMONTHS(TODAY(),-1)) &amp;&amp; (Item_Revenue_End_Month__c &gt;= DATE(YEAR(ADDMONTHS(TODAY(),-1)),MONTH(ADDMONTHS(TODAY(),-1)),1)), ARR__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR Last Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>TotalPrice * 12 * IF(Recurring_Revenue__c  &amp;&amp;   ISBLANK(Opportunity.Opt_Out_Date__c ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accounting_Bin_Overridden__c</fullName>
        <formula>BLANKVALUE( TEXT(Accounting_Bin_Override__c) ,   BLANKVALUE(TEXT(PricebookEntry.Product2.Accounting_Bin__c), &quot;Subscriptions&quot;)  )</formula>
        <label>Accounting Bin Overridden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Bin_Override__c</fullName>
        <description>Fill in if a value different than the Product2 Value is needed. This is usually necessary for the One Time Discount Product.</description>
        <inlineHelpText>Fill in if a value different than the Product2 Value is needed. This is usually necessary for the One Time Discount Product.</inlineHelpText>
        <label>Accounting Bin Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
                <value>
                    <fullName>Implementation Revenue</fullName>
                </value>
                <value>
                    <fullName>Record Migrator</fullName>
                </value>
                <value>
                    <fullName>Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Vault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Bin_Quantity__c</fullName>
        <formula>IF(PricebookEntry.Product2.Accounting_Bin_Quantity_Count__c, 1,0)* Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Bin Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Annualized Total Price (Sales Price * Quantity)</description>
        <formula>TotalPrice * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Price * 12</inlineHelpText>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Given__c</fullName>
        <description>Reduced List Price in %</description>
        <formula>1 - (UnitPrice  /  ListPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reduced List Price in %</inlineHelpText>
        <label>Discount Given (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_PS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this PS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_End_Date__c</fullName>
        <formula>IF(ISBLANK(Item_Start_Date__c),  Opportunity.Subscription_End_Date__c ,  ADDMONTHS(Item_Start_Date__c, of_Months__c)-1)</formula>
        <label>Item End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Revenue_End_Month__c</fullName>
        <formula>ADDMONTHS( Item_Revenue_Start_Month__c , IF(of_Months__c-1&gt;0,of_Months__c-1,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Revenue End Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Revenue_Start_Month__c</fullName>
        <formula>DATE(YEAR( BLANKVALUE( Item_Start_Date__c ,  Opportunity.Subscription_Start_Date__c ) ),MONTH(BLANKVALUE( Item_Start_Date__c ,  Opportunity.Subscription_Start_Date__c )),1)</formula>
        <label>Item Revenue Start Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Start_Date__c</fullName>
        <description>Start date of this opportunity line item if it differs from the start date of the full opportunity, or if the number of months for this product differs from the full opportunity. This only applies for recurring products.</description>
        <inlineHelpText>Start date of this opportunity line item if it differs from the start date of the full opportunity, or if the number of months for this product differs from the full opportunity. This only applies for recurring products.</inlineHelpText>
        <label>Item Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_ID__c</fullName>
        <description>Opportunity Line Item record ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Line Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>This field is mapped to &apos;Product Family&apos; in Product and gets updated via a flow.</description>
        <label>Product Family</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Active_Last_Full_Month_of_Opp__c</fullName>
        <formula>Item_Revenue_End_Month__c =  Opportunity.Revenue_End_Month__c</formula>
        <label>Product Active Last Full Month of Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>ListPrice * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List Price * Quantity</inlineHelpText>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Total Contract Price (Quantity*Sale Price*number of months)</description>
        <formula>if( OR(of_Months__c =0,ISBLANK(of_Months__c)) , TotalPrice , TotalPrice * of_Months__c)</formula>
        <inlineHelpText>Total Price*number of months</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Contract period</description>
        <inlineHelpText>If this is NOT an annual subs, please enter the number of Months.</inlineHelpText>
        <label># of Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Add_Or_Edit_Restrcited_Access_Products</fullName>
        <active>true</active>
        <description>Only Bob K and Jessica N are allowed to add/edit the products listed under the &apos;Professional Services - Restricted&apos; Product Family.</description>
        <errorConditionFormula>AND
(
NOT($Permission.Permission_to_add_update_restricted_access_products),  ISPICKVAL( Product2.Family , &apos;Professional Services - Restricted&apos;)
)</errorConditionFormula>
        <errorMessage>You are not authorized to add/edit this product, please reach ServicesRequests@autorabit.com for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NRR_Products_0_Months</fullName>
        <active>false</active>
        <description>Non-recurring products must be entered with 1 or 0 months.</description>
        <errorConditionFormula>AND(of_Months__c &gt; 1,  ISPICKVAL(Product2.Product_Type__c, &quot;Non-recurring&quot;))</errorConditionFormula>
        <errorDisplayField>of_Months__c</errorDisplayField>
        <errorMessage>Non-recurring products must be entered with 1 or 0 months.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Group</fullName>
        <active>false</active>
        <description>Product Group to be selected</description>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>Product Group cannot be empty</errorMessage>
    </validationRules>
</CustomObject>